<resources>
<string name="app_name">ИМЕиТ</string>
    <string name="ob_ex_phys">Общая и экспериментальная физика</string>
    <string name="rech_zad_pm">РЕШЕНИЕ ЗАДАЧ ЛИНЕЙНОЙ АЛГЕБРЫ И АНАЛИТИЧЕСКОЙ ГЕОМЕТРИИ С ПОМОЩЬЮ МАТЕМАТИЧЕСКИХ ПАКЕТОВ</string>
    <string name="ob_soc_geogr">Общая социальноэкономическая география</string>
    <string name="osn_geo">Основания геометрии</string>
    <string name="oop_an_pr">Объектно-ориентированный анализ и программирование</string>
    <string name="inj_gra">Инженерная графика</string>
    <string name="teo_ver">Теория вероятностей и математическая статистика</string>
    <string name="osn_res">Основы компьютерного проектирования РЭС</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ras">Расписание</string>
    <string name="ras2">Настр. расписание</string>
    <string name="groope">Ваша группа:</string>
    <string name="teo_inz_obr">Теория и практика инзивного образования</string>
    <string name="sov_prob_el">Современные проблемы прикладной математики и информатики</string>
    <string name="sov_prob_iivt">Современные проблемы информатики и вычислительной техники</string>
    <string-array name="weeks">
        <item>Числитель</item>
        <item>Знаменатель</item>
    </string-array>
    <string name="auto">Числитель</string>
    <string name="week_i">Числитель</string>
    <string-array name="institutes">
        <item>ИМЕиТ</item>
    </string-array>
    <string-array name="imet_facultet">
        <item>Инжинерно-Физический</item>
        <item>Физико-Математический</item>
    </string-array>
    <string name="m_e">Инжинерно-Физический</string>
    <string name="m_f">Физико-Математический</string>
    <string-array name="education">
        <item>Бакалавриат</item>
        <item>Магистратура</item>
        <item>Аспирантура</item>
    </string-array>
    <string name="bak">Бакалавриат</string>
    <string name="mag">Магистратура</string>
    <string name="asp">Аспирантура</string>
    <string-array name="bak_m_groups">
        <item>ФМиИ-11</item>
        <item>ПМ-11</item>
        <item>ИиВТ-12</item>
        <item>ИСиТ-11</item>
        <item>МИ-21</item>
        <item>МФ-21</item>
        <item>ПМ-21</item>
        <item>БИ-21</item>
        <item>ИиВТ-21</item>
        <item>ИСиТ-21</item>
        <item>НЭ-21</item>
        <item>МФ-31</item>
        <item>ПМ-31</item>
        <item>ИиВТ-31</item>
        <item>НЭ-31</item>
        <item>М-41</item>
        <item>ФМ-41</item>
        <item>ПМ-41</item>
        <item>ИиВТ-41</item>
        <item>НЭ-41</item>
    </string-array>
    <string-array name="bak_m_groups_val">
        <item>FMiI11</item>
        <item>PM11</item>
        <item>IiVT12</item>
        <item>ISiI11</item>
        <item>МI21</item>
        <item>MF21</item>
        <item>PM21</item>
        <item>BI21</item>
        <item>IiVT21</item>
        <item>ISiT21</item>
        <item>NE21</item>
        <item>BX21</item>
        <item>EG21</item>
        <item>MF31</item>
        <item>PM31</item>
        <item>IiVT31</item>
        <item>NE31</item>
        <item>M41</item>
        <item>FM41</item>
        <item>PM41</item>
        <item>IiVT41</item>
        <item>NE41</item>
    </string-array>
    <string-array name="bak_e_groups">

        <item>ХБиГ-11</item>
        <item>ФС-11</item>
        <item>ФР-11</item>
        <item>ФР-12</item>
        <item>БХ-21</item>
        <item>ЕГ-21</item>
        <item>ФС-21</item>
        <item>ФР-21</item>
        <item>БХ-31</item>
        <item>МЕ-31</item>
        <item>ФС-31</item>
        <item>ФР-31</item>
        <item>ФС-41</item>
        <item>ФР-41</item>

    </string-array>
    <string-array name="bak_e_groups_val">

        <item>XbiG11</item>
        <item>FC11</item>
        <item>FP11</item>
        <item>FR12</item>
        <item>BX21</item>
        <item>EG21</item>
        <item>FC21</item>
        <item>FR21</item>
        <item>BX31</item>
        <item>ME31</item>
        <item>FC31</item>
        <item>FR31</item>
        <item>FC41</item>
        <item>FP41</item>

    </string-array>
    <string-array name="mag_m_groups">

        <item>МиИТм-11</item>
        <item>ПМм-11</item>
        <item>ИиВтМ-11</item>
        <item>Мм-21</item>
        <item>ПМм-21</item>
        <item>ИиВТм-21</item>

    </string-array>
    <string-array name="mag_m_groups_val">

        <item>MiITm-11</item>
        <item>PMm11</item>
        <item>IiVTm11</item>
        <item>Mm21</item>
        <item>Pmm21</item>
        <item>IiVTm21</item>

    </string-array>
    <string-array name="mag_e_groups">
        <item>ФСм-11</item>
        <item>ФСм-21</item>
    </string-array>
    <string-array name="mag_e_groups_val">
        <item>FCm11</item>
        <item>FCm21</item>
    </string-array>
    <string-array name="groups_value">
        <item>FMiI11</item>
        <item>PM11</item>
        <item>IiVT21</item>
        <item>ISiI11</item>

        <item>MI21</item>
        <item>MF21</item>
        <item>PM21</item>
        <item>BI21</item>
        <item>IiVT21</item>
        <item>ISiT21</item>
        <item>NE21</item>
        <item>BX21</item>
        <item>EG21</item>
        <item>MF31</item>
        <item>PM31</item>
        <item>IiVT31</item>
        <item>NE31</item>
        <item>M41</item>
        <item>FM41</item>
        <item>PM41</item>
        <item>IiVT41</item>
        <item>NE41</item>
        <item>MiITm-11</item>
        <item>PMm11</item>
        <item>IiVTm11</item>
        <item>Mm21</item>
        <item>Pmm21</item>
        <item>IiVTm21</item>
        <item>XbiG11</item>
        <item>FC11</item>
        <item>FP11</item>
        <item>FR12</item>
        <item>FC21</item>
        <item>FR21</item>
        <item>BX31</item>
        <item>ME31</item>
        <item>FC31</item>
        <item>FR31</item>
        <item>FC41</item>
        <item>FP41</item>
        <item>FCm11</item>
        <item>FCm21</item>

    </string-array>
    <string-array name="all_group">
        <item>ФМиИ-11</item>
        <item>ПМ-11</item>
        <item>ИиВТ-12</item>
        <item>ИСиТ-11</item>

        <item>МИ-21</item>
        <item>МФ-21</item>
        <item>ПМ-21</item>
        <item>БИ-21</item>
        <item>ИиВТ-21</item>
        <item>ИСиТ-21</item>
        <item>НЭ-21</item>

        <item>МФ-31</item>
        <item>ПМ-31</item>
        <item>ИиВТ-31</item>
        <item>НЭ-31</item>

        <item>М-41</item>
        <item>ФМ-41</item>
        <item>ПМ-41</item>
        <item>ИиВТ-41</item>
        <item>НЭ-41</item>

        <item>МиИТм-11</item>
        <item>ПМм-11</item>
        <item>ИиВтМ-11</item>
        <item>Мм-21</item>
        <item>ПМм-21</item>
        <item>ИиВТм-21</item>
        <item>ХБиГ-11</item>
        <item>ФС-11</item>
        <item>ФР-11</item>
        <item>ФР-12</item>
        <item>БХ-21</item>
        <item>ЕГ-21</item>
        <item>ФС-21</item>
        <item>ФР-21</item>
        <item>БХ-31</item>
        <item>МЕ-31</item>
        <item>ФС-31</item>
        <item>ФР-31</item>
        <item>ФС-41</item>
        <item>ФР-41</item>
        <item>МиИТм-11</item>
        <item>ПМм-11</item>
        <item>ИиВтМ-11</item>
        <item>Мм-21</item>
        <item>ПМм-21</item>
        <item>ИиВТм-21</item>
        <item>ФСм-11</item>
        <item>ФСм-21</item>

    </string-array>
    <string name="pr_asoi">Проектирование АСОИУ</string>
    <string name="set_protocol">Сетевые протоколы и интернет-технологии</string>
    <string name="paket_asu">Пакеты прикладных программ</string>
    <string name="filosofia">Философия</string>
    <string name="history">История</string>
    <string name="langM">Иностранный язык</string>
    <string name="inlang">Иностранный язык (Английский)</string>
    <string name="inlangN">Иностранный язык(Немецкий)</string>
    <string name="inlangAaN">Иностранный язык (Английский)|(Немецкий)</string>
    <string name="algebra_a_geo">Алгебра и геометрия</string>
    <string name="dif_ur">Дифференциальные уравнения</string>
    <string name="algebra_a_teoc">Алгебра и теория чисел</string>
    <string name="nus_m">Избранные вопросы дифференциального и интегрального исчислений</string>
    <string name="m_analis">Математический анализ</string>
    <string name="m_analiso">Основы математического анализа</string>
    <string name="disckret">Дискретная математика</string>
    <string name="matlogic">Математическая логика и теория алгоритмов</string>
    <string name="veroyat">Теория вероятностей и математическая статистика</string>
    <string name="analis_data">Анализ данных</string>
    <string name="vvod_v_analis">Введение в анализ</string>
    <string name="vvov_v_ped_de">Введение в педагогическую деятельность. Общие основы педагогики</string>
    <string name="informat">Информатика</string>
    <string name="physics">Физика</string>
    <string name="chemistry">Химия</string>
    <string name="chemistrya">Аналитическая химия</string>
    <string name="chemistryo">Органическая химия</string>
    <string name="servicologia">Сервисология</string>
    <string name="eco">Экология</string>
    <string name="eco_rac">Экология и рациональное природопользование</string>
    <string name="che_org">Органическая химия</string>
    <string name="sov_met_him">Современные методы химического анализа</string>
    <string name="che_okr">Химия окружающей среды</string>
    <string name="me_zam">^ 11.09;  09.10;  06.11; 04.12</string>
    <string name="serv_info">Сервис систем передачи, приема и обработки информации </string>
    <string name="matcad">Теория и пр проведения расчетов электрических и электронных схем в среде Mathcad и Multisim</string>
    <string name="his_met_nau">История и методология науки </string>
    <string name="prav_serv_de">Правовое обеспечение сервисной деятельности</string>
    <string name="radutr_siti">Радиооптоэлектронные сети и  устройства</string>
    <string name="rad_sys">Радиотехнические системы</string>
    <string name="teo_razv">Технологии проектирования математического развития</string>
    <string name="inf_sys">Теория информационных процессов и систем</string>
    <string name="inf_tex">Информационные технологии</string>
    <string name="inf_tex_ob">Информационные технологии в образовании</string>
    <string name="arx_sys">Архитектура информационных систем</string>
    <string name="arx_com">Архитектура компьютеров</string>
    <string name="one">1</string>
    <string name="time_zvonok">Время звонков</string>
    <string name="others2">Дополнительно</string>
    <string name="maps">Учебные корпуса</string>
    <string name="min_10">10 минут</string>
    <string name="min_5">5 минут</string>
    <string name="agronom_in">Агропромышленный институт</string>
    <string name="agr_i_1">Адрес: ул. Допризывников, д. 1</string>
    <string name="his_in">Институт истории и культуры</string>
    <string name="his_ins">Адрес: ул. Коммунаров, д. 28</string>
    <string name="imeit_i">Институт математики, естествознания и техники</string>
    <string name="imeit_in">Адрес: ул. Ленина, д. 86</string>
    <string name="pravo_in">Институт права и экономики</string>
    <string name="pravo_ins_">Адрес: ул. Коммунаров, д. 28</string>
    <string name="peagog_in">Институт психологии и педагогики</string>
    <string name="ped_inst">Адрес: ул. Коммунаров, д. 15</string>
    <string name="fk_ins">Институт физической культуры, спорта и БЖ</string>
    <string name="fk_ins_adr">Адрес: ул. Допризывников, д. 1а</string>
    <string name="filol_ins">Институт филологии</string>
    <string name="filol_adr">Адрес: ул. Коммунаров, д. 39</string>
    <string name="spo">Центр СПО</string>
    <string name="spo_adr">Адрес: ул. Допризывников, д. 1а</string>
    <string name="time001">08:30 – 09:15</string>
    <string name="time002">09:20 – 10:05</string>
</resources>