<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_tab"
            android:icon="@drawable/tab1"
            android:title="@string/ras" />
        <item
            android:id="@+id/time_alarm"
            android:icon="@drawable/ic_access_time"
            android:title="@string/time_zvonok" />

    </group>

    <item
        android:title="@string/others2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/map"
                    android:icon="@drawable/ic_map_black_24dp"
                    android:title="@string/maps" />
            </group>
        </menu>
    </item>
</menu>
