<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:divider="?android:dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:id="@+id/w1"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/one"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="?android:dividerVertical"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:divider="?android:dividerVertical"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:showDividers="middle">


                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time001"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/t6"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/min_5"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:divider="?android:dividerVertical"
                android:orientation="horizontal"
                android:showDividers="middle">


                <TextView
                    android:id="@+id/t7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time002"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/t8"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/min_10"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>