<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ffd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ins1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:src="@drawable/ic_agr" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/d1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/agronom_in"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/agr_i_1"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ins2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:src="@drawable/ic_his" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/d2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/his_in"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/his_ins"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ins3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/ic_mat" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/d3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/imeit_i"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView50"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/imeit_in"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ins4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:src="@drawable/ic_pravo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/d4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/pravo_in"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView

                        android:id="@+id/textView54"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/pravo_ins_"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ins5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:src="@drawable/ic_psi" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/d5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/peagog_in"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/ped_inst"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ins6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:src="@drawable/ic_fk" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/d6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/fk_ins"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/fk_ins_adr"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ins7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="2dp"
                            android:src="@drawable/ic_fil" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView

                        android:id="@+id/d7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/filol_ins"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView

                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/filol_adr"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ins8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/card_row1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_spo" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/d8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom|left"
                        android:text="@string/spo"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/spo_adr"
                        android:textColor="@color/colorTextSub"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>